# PvZ-x64

./: .gitignore  AGENTS.md  CMakeLists.txt  ChallengeScreen_S.txt  ConstEnums.h  DrawButton_disasm.txt  GEMINI.md  GameConstants.h  LawnApp.cpp  LawnApp.h  LawnApp_LoadingThreadProc_fix.cpp  PlantsVsZombies.rc  README.md  Resources.cpp  Resources.h  bass.def  build.sh  build_linux.sh  check_offsets.cpp  crash_source.txt  fix_critsect.py  main.cpp  mingw-toolchain.cmake  rewrite_init.py  run.sh  symbols.txt  test_enum.cpp  test_size.cpp  test_size.s
.agents/workflows/: graphify.md
ImageLib/: ImageLib.cpp  ImageLib.h
ImageLib/jpeg2000/: jas_config.h
ImageLib/zlib/: zconf.h
Lawn/: Board.cpp  Board.h  Challenge.cpp  Challenge.h  Coin.cpp  CutScene.cpp  Hotkey.cpp  Hotkey.h  LawnCommon.cpp  LawnMower.cpp  Plant.cpp  Plant.h  Projectile.cpp  SeedPacket.cpp  ZenGarden.cpp  Zombie.cpp  Zombie.h
Lawn/System/: DataSync.cpp  DataSync.h  Music.cpp  Music.h  PlayerInfo.cpp  PoolEffect.cpp  ProfileMgr.cpp  ReanimationLawn.cpp  SaveGame.cpp  SaveGame.h
Lawn/Widget/: AlmanacDialog.cpp  AlmanacDialog.h  AwardScreen.cpp  ChallengeScreen.cpp  ContinueDialog.cpp  CreditScreen.cpp  HotkeyHelpDialog.cpp  HotkeyHelpDialog.h  SeedChooserScreen.cpp
PakLib/: PakInterface.cpp  PakInterface.h
Sexy.TodLib/: DataArray.h  Definition.cpp  Definition.h  FilterEffect.cpp  ReanimAtlas.cpp  Reanimator.cpp  Reanimator.h  TodCommon.cpp  TodCommon.h  TodDebug.cpp  TodDebug.h  TodDrawTriangle.cpp  TodFoley.cpp  TodList.cpp  TodList.h  TodParticle.cpp
SexyAppFramework/: AutoCrit.h  BassLoader.cpp  BassLoader.h  BassMusicInterface.cpp  Color.cpp  Common.cpp  Common.h  CritSect.cpp  CritSect.h  D3D8Helper.cpp  D3D8Helper.h  D3DInterface.cpp  D3DInterface.h  D3DTester.cpp  D3DTester.h  DDImage.cpp  DDImage.h  DDInterface.cpp  DDInterface.h  DSoundInstance.cpp  DSoundManager.cpp  DSoundManager.h  DescParser.cpp  DirectXErrorString.cpp  DirectXErrorString.h  EditWidget.cpp  FModLoader.cpp  FModLoader.h  FModMusicInterface.cpp  FModSoundInstance.cpp  FModSoundInstance.h  FModSoundManager.cpp  FModSoundManager.h  HTTPTransfer.cpp  ImageFont.cpp  MASoundCommon.h  MTRand.cpp  MemoryImage.cpp  ModVal.cpp  PerfTimer.cpp  (+21 more)
SexyAppFramework/ogg/: os_types.h
compat/: Math.h  Shlobj.h  Windows.h  Winsock2.h  pvz_compat.h
plans/: 64bit-migration-analysis.md  64bit-migration-plan.md  session-1-prompt.md  session-2-prompt.md  session-3-prompt.md  session-4-prompt.md
